log incomplete packet reads in NetworkHandler (#2288)